# My-calsi

./: README.md
Mycalsi/: settings.gradle
Mycalsi/app/: build.gradle
Mycalsi/app/src/main/: AndroidManifest.xml
Mycalsi/app/src/main/cpp/: CMakeLists.txt  calculate.h  native-lib.cpp
Mycalsi/app/src/main/java/com/example/mycalsi/: MainActivity.java
Mycalsi/app/src/main/res/layout/: activity_main.xml
Mycalsi/app/src/main/res/values/: strings.xml
Mycalsi/gradle/wrapper/: gradle-wrapper.properties
